updated to 1.12