@@ -4,31 +4,35 @@ import org.bukkit.Material;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandExecutor;
 import org.bukkit.command.CommandSender;
+import org.bukkit.command.TabCompleter;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
 import org.bukkit.persistence.PersistentDataType;
+import org.bukkit.util.StringUtil;
 import org.jetbrains.annotations.NotNull;
-import org.bukkit.command.TabCompleter;
-import java.util.List;
+
 import java.util.ArrayList;
-import java.util.stream.Collectors;
+import java.util.Collections;
+import java.util.List;
 
 public record CommandHandler(CustomHitCommand plugin) implements CommandExecutor, TabCompleter {
 
+    private static final List<String> SUB_COMMANDS = List.of("reload", "sethititem");
+
     @Override
     public List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command, @NotNull String label, String[] args) {
-        List<String> subCommands = new ArrayList<>();
-        subCommands.add("reload");
-        subCommands.add("sethititem");
-
         if (args.length == 1) {
-            return subCommands.stream()
-                    .filter(s -> s.startsWith(args[0].toLowerCase()))
-                    .collect(Collectors.toList());
-        }
+            List<String> completions = new ArrayList<>();
+            List<String> availableSubcommands = SUB_COMMANDS.stream()
+                    .filter(sub -> sender.hasPermission("customhitcommand." + sub))
+                    .toList();
 
-        return List.of();
+            StringUtil.copyPartialMatches(args[0], availableSubcommands, completions);
+            Collections.sort(completions);
+            return completions;
+        }
+        return Collections.emptyList();
     }
 
     @Override
@@ -38,49 +42,52 @@ public record CommandHandler(CustomHitCommand plugin) implements CommandExecutor
             return true;
         }
 
-        if (args[0].equalsIgnoreCase("reload")) {
-            if (!sender.hasPermission("customhitcommand.reload")) {
-                sender.sendMessage(plugin.getFormattedMessage("no-permission"));
-                return true;
-            }
-
-            plugin.reloadConfig();
-            sender.sendMessage(plugin.getFormattedMessage("reload-success"));
-            return true;
+        switch (args[0].toLowerCase()) {
+            case "reload" -> handleReload(sender);
+            case "sethititem" -> handleSetHitItem(sender);
+            default -> sender.sendMessage(plugin.getFormattedMessage("command-usage"));
         }
 
-        else if (args[0].equalsIgnoreCase("sethititem")) {
-            if (!(sender instanceof Player player)) {
-                sender.sendMessage(plugin.getConfig().getString("messages.sethititem-player-only", "This command can only be executed by a player."));
-                return true;
-            }
-
-            if (!player.hasPermission("customhitcommand.sethititem")) {
-                sender.sendMessage(plugin.getFormattedMessage("no-permission"));
-                return true;
-            }
-
-            ItemStack item = player.getInventory().getItemInMainHand();
-            if (item.getType() == Material.AIR) {
-                player.sendMessage(plugin.getFormattedMessage("sethititem-no-hand-item"));
-                return true;
-            }
-
-            ItemMeta meta = item.getItemMeta();
-            if (meta == null) {
-                player.sendMessage(plugin.getFormattedMessage("sethititem-no-item-meta"));
-                return true;
-            }
-
-            meta.getPersistentDataContainer().set(CustomHitCommand.CUSTOM_ITEM_KEY, PersistentDataType.STRING, "true");
-            item.setItemMeta(meta);
-
-            player.sendMessage(plugin.getFormattedMessage("sethititem-success"));
-
-            return true;
-        }
-
-        sender.sendMessage(plugin.getFormattedMessage("command-usage"));
         return true;
+    }
+
+    private void handleReload(CommandSender sender) {
+        if (!sender.hasPermission("customhitcommand.reload")) {
+            sender.sendMessage(plugin.getFormattedMessage("no-permission"));
+            return;
+        }
+
+        plugin.reloadConfig();
+        sender.sendMessage(plugin.getFormattedMessage("reload-success"));
+    }
+
+    private void handleSetHitItem(CommandSender sender) {
+        if (!(sender instanceof Player player)) {
+            sender.sendMessage(plugin.getFormattedMessage("sethititem-player-only"));
+            return;
+        }
+
+        if (!player.hasPermission("customhitcommand.sethititem")) {
+            player.sendMessage(plugin.getFormattedMessage("no-permission"));
+            return;
+        }
+
+        ItemStack item = player.getInventory().getItemInMainHand();
+
+        if (item.getType() == Material.AIR) {
+            player.sendMessage(plugin.getFormattedMessage("sethititem-no-hand-item"));
+            return;
+        }
+
+        ItemMeta meta = item.getItemMeta();
+        if (meta == null) {
+            player.sendMessage(plugin.getFormattedMessage("sethititem-no-item-meta"));
+            return;
+        }
+
+        meta.getPersistentDataContainer().set(CustomHitCommand.CUSTOM_ITEM_KEY, PersistentDataType.STRING, "true");
+        item.setItemMeta(meta);
+
+        player.sendMessage(plugin.getFormattedMessage("sethititem-success"));
     }
 }
